@@ -14,6 +14,7 @@
   - Added bulk method to Mango::Collection.
   - Added write_error method to Mango::Protocol.
   - Added bson_raw function to Mango::BSON.
+  - Improved connection management with wire protocol version check.
   - Improved Mango::BSON performance.
   - Improved command performance.
   - Improved storage efficiency of Mango::GridFS::Writer by lowering the
